--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,7 @@
 </head>
 <body>
     {{> _header}}
+    {{>_add_btn}}
     <div class="container">
         {{{body}}}
     </div>
@@ -21,6 +22,7 @@
 
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
+        M.FormSelect.init(document.querySelector('#status'))
     </script>
 </body>
 </html>
